--- a/templates/index.html
+++ b/templates/index.html
@@ -9,13 +9,20 @@
     <link rel="shortcut icon" href="/img/burrdy.ico">
 </head>
 
+<template name="layout">
+    <div class="container">
+        <header>
+            {{> NavBar}}
+        </header>
+
+        {{> yield}}
+    </div>
+</template>
 
 
 
 
-
-
-<template name="Navigation Bar">
+<template name="NavBar">
     <!-- Navigation Bar -->
     <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation" style = "background-color: #ffa000">
         <div class="container topnav">
