--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <link rel="shortcut icon" href="/img/burrdy.ico">
 </head>
 
+<!--
 <template name="layout">
     <div class="container">
         <header>
@@ -18,8 +19,7 @@
         {{> yield}}
     </div>
 </template>
-
-
+-->
 
 
 <template name="NavBar">
@@ -32,7 +32,8 @@
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="/" class="navbar-brand topnav" > Home </a>
+
+                <a class="navbar-brand topnav" href="/"  > Home </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -50,7 +51,7 @@
 </template>
 
 <template name="Home">
-
+    {{> NavBar}}
     <!-- Main Body -->
     <a name="home"></a>
     <div class="intro-header">
@@ -81,6 +82,8 @@
 
 <template name="About">
 
+    {{> NavBar}}
+    
     <div class = "team-section">
         <div class = "section-wrap" > 
             <div class="section-title">Who we are.
