Edited About page to reflect current team

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,18 +9,6 @@
     <link rel="shortcut icon" href="/img/burrdy.ico">
 </head>
 
-<!--
-<template name="layout">
-    <div class="container">
-        <header>
-            {{> NavBar}}
-        </header>
-
-        {{> yield}}
-    </div>
-</template>
--->
-
 
 <template name="NavBar">
     <!-- Navigation Bar -->
@@ -83,65 +71,52 @@
 <template name="About">
 
     {{> NavBar}}
-    
+
     <div class = "team-section">
         <div class = "section-wrap" > 
             <div class="section-title">Who we are.
   <!-- think about a cool autofill thing -->
             </div>
             <div class ="members">
-                <div class ="member">
-                    <img src="/img/burrdy_purp.png" alt="adam"/>
-                    <!-- <div class="member-name">Adam Dorwort</div> -->
-                    <!-- <div class="member-title">Software</div> -->
+                <div class ="member-clevel">
+                    <img src="/img/prof_david.png" alt="adam"/>
+                    <div class="member-name">David Liberman</div>
+                    <div class="member-title">CEO</div>
                 </div>
-                <div class ="member">
-                    <img src="/img/a9.png" alt="adam"/>
-                    <div class="member-name">Andrew Walters</div>
-                    <div class="member-title">Project Manager</div>
-                </div>
-                 <div class ="member">
-                    <img src="/img/burd_rev.png" alt="adam"/>
-                    <!-- <div class="member-name">Adam Dorwort</div> -->
-                    <!-- <div class="member-title">Software</div> -->
+                 <div class ="member-clevel">
+                    <img src="/img/prof_adam.png" alt="adam"/>
+                    <div class="member-name">Adam Dorwort</div>
+                    <div class="member-title">CTO</div>
                 </div>
             </div>
             <div class ="members">
-                <div class ="member">
-                    <img src="/img/a3.png" alt="adam"/>
-                    <div class="member-name">Adam Dorwort</div>
-                    <div class="member-title">Software Architect</div>
-                </div>
                  <div class ="member">
-                    <img src="/img/trent_cute.gif" alt="adam"/>
+                    <img src="/img/prof_trent.gif" alt="adam"/>
                     <div class="member-name">Trent Robison</div>
                     <div class="member-title">Software Development Lead</div>
-                </div><div class ="member">
-                    <img src="/img/a4.png" alt="adam"/>
+                </div>
+                <div class ="member">
+                    <img src="/img/prof_soham.png" alt="adam"/>
                     <div class="member-name">Soham Jatakia</div>
                     <div class="member-title">Software Development Lead</div>
                 </div>
                 <div class ="member">
-                    <img src="/img/a1.png" alt="adam"/>
+                    <img src="/img/prof_chloe.png" alt="adam"/>
                     <div class="member-name">Chloe Lopez</div>
                     <div class="member-title">User Interface Specialist</div>
                 </div>
-                 <div class ="member">
-                    <img src="/img/a2.png" alt="adam"/>
-                    <div class="member-name">David Liberman</div>
-                    <div class="member-title">Business and Systems Specialist</div>
-                </div><div class ="member">
-                    <img src="/img/a7.png" alt="adam"/>
+                <div class ="member">
+                    <img src="/img/prof_sherman.png" alt="adam"/>
                     <div class="member-name">Sherman Cheung</div>
                     <div class="member-title">Algorthims Specialist</div>
                 </div>
                 <div class ="member">
-                    <img src="/img/a5.png" alt="adam"/>
+                    <img src="/img/prof_anjali.png" alt="adam"/>
                     <div class="member-name">Anjali Patel</div>
                     <div class="member-title">QA Specialist</div>
                 </div>
-                 <div class ="member">
-                    <img src="/img/a10.png" alt="adam"/>
+                <div class ="member">
+                    <img src="/img/prof_brenton.png" alt="adam"/>
                     <div class="member-name">Brenton Ang</div>
                     <div class="member-title">Database Specialist</div>
                 </div>
