Add Andrew photo and realign photos

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,8 +29,6 @@
                 <ul class="nav navbar-nav navbar-right">
                     
                   <li><a href="/about">About</a></li>
-                  <li><a href="/faq">FAQ</a></li>
-                  <li><a href="/suggestions">Suggestions</a></li>
 
                 </ul>
             </div>
@@ -78,15 +76,20 @@
   <!-- think about a cool autofill thing -->
             </div>
             <div class ="members">
-                <div class ="member-clevel">
+                <div class ="member">
                     <img src="/img/prof_david.png" alt="adam"/>
                     <div class="member-name">David Liberman</div>
                     <div class="member-title">CEO</div>
                 </div>
-                 <div class ="member-clevel">
+                 <div class ="member">
                     <img src="/img/prof_adam.png" alt="adam"/>
                     <div class="member-name">Adam Dorwort</div>
                     <div class="member-title">CTO</div>
+                </div>
+                <div class ="member">
+                    <img src="/img/prof_andrew.png" alt="adam"/>
+                    <div class="member-name">Andrew Walters</div>
+                    <div class="member-title">Software Developer</div>
                 </div>
             </div>
             <div class ="members">
@@ -108,7 +111,7 @@
                 <div class ="member">
                     <img src="/img/prof_sherman.png" alt="adam"/>
                     <div class="member-name">Sherman Cheung</div>
-                    <div class="member-title">Algorthims Specialist</div>
+                    <div class="member-title">Algorithms Specialist</div>
                 </div>
                 <div class ="member">
                     <img src="/img/prof_anjali.png" alt="adam"/>
