--- a/templates/index.html
+++ b/templates/index.html
@@ -1,138 +1,82 @@
 <head>
+    <meta charset="utf-8">
     <title>Burrd</title>
+    <meta name="description" content="Your happy hour destination">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" type="text/css" href="css/myStyle.css">  
-    <link href="css/landing-page.css" rel="stylesheet">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/splash.css">
+    <link rel="stylesheet" href="images/museosans_300_macroman/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="images/museosans_500_macroman/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="images/museosans_700_macroman/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 
-    <link rel="shortcut icon" href="/img/burrdy.ico">
+    <script src="/js/jquery-1.11.0.min.js"></script>
+    <script src="/js/vanity.js"></script>
 </head>
 
-
-<template name="NavBar">
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation" style = "background-color: #ffa000">
-        <div class="container topnav">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                </button>
-
-                <a class="navbar-brand topnav" href="/"  > Home </a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    
-                  <li><a href="/about">About</a></li>
-
-                </ul>
-            </div>
+<template name="Home" id="splash">
+    <div class="container">
+        <nav>
+            <a href="about">About</a>
+            <a href="https://medium.com/@theburrd">Blog</a>
+            <a href="placeholder" class="applink appstore-link" title="Download on the App Store">App Store</a>
+            <a href="https://play.google.com/store/apps/details?id=tv.periscope.android" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a>
+        </nav>
+        <h1>
+            Burrd
+        </h1>
+        <span class="headline">
+            Your happy hour destination
+        </span>
+    <!--
+        <div class="video-cta">
+          <svg class="playbutton" width="88px" height="88px" viewBox="0 0 88 88" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+              <g id="vanity-google-store-copy" sketch:type="MSArtboardGroup" transform="translate(-657.000000, -354.000000)">
+                <g id="playbutton" sketch:type="MSLayerGroup" transform="translate(658.000000, 355.000000)">
+                  <circle id="playstroke" stroke="#FFFFFF" stroke-width="2" fill-opacity="0.2" fill="#000000" sketch:type="MSShapeGroup" cx="43" cy="43" r="43"></circle>
+                  <polygon id="Triangle-1" fill="#FFFFFF" sketch:type="MSShapeGroup" transform="translate(47.000000, 43.000000) rotate(90.000000) translate(-47.000000, -43.000000) " points="47 29 61 57 33 57 "></polygon>
+                </g>
+              </g>
+            </g>
+          </svg>
         </div>
-    </nav>
-</template>
+    -->
 
-<template name="Home">
-    {{> NavBar}}
-    <!-- Main Body -->
-    <a name="home"></a>
-    <div class="intro-header">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="intro-message">
-                        
-                        <h3>Have you heard the wurrd?</h3>
-                        
-                        <img src= "/img/burrd_large.png" style="max-height:400px" width="auto">
-                        <h3>Everybody's heard, about</h3>
-                        <h1>the burrd</h1>
-                        <h3>Your happy hour destination</h3>    
-
-                        <hr class="intro-divider">
-                        <img src="/img/scrollArrow.png" class="center-block img-responsive " alt="Responsive image">
-                            
-                      </div>
-                  </div>
-              </div>
-          </div>
-    </div>
-    
-  <script src="js/jquery.js"></script>
-</template>
-
-
-<template name="About">
-
-    {{> NavBar}}
-
-    <div class = "team-section">
-        <div class = "section-wrap" > 
-            <div class="section-title">Who we are.
-  <!-- think about a cool autofill thing -->
-            </div>
-            <div class ="members">
-                <div class ="member">
-                    <img src="/img/prof_david.png" alt="adam"/>
-                    <div class="member-name">David Liberman</div>
-                    <div class="member-title">CEO</div>
-                </div>
-                 <div class ="member">
-                    <img src="/img/prof_adam.png" alt="adam"/>
-                    <div class="member-name">Adam Dorwort</div>
-                    <div class="member-title">CTO</div>
-                </div>
-                <div class ="member">
-                    <img src="/img/prof_andrew.png" alt="adam"/>
-                    <div class="member-name">Andrew Walters</div>
-                    <div class="member-title">Software Developer</div>
-                </div>
-            </div>
-            <div class ="members">
-                 <div class ="member">
-                    <img src="/img/prof_trent.gif" alt="adam"/>
-                    <div class="member-name">Trent Robison</div>
-                    <div class="member-title">Software Development Lead</div>
-                </div>
-                <div class ="member">
-                    <img src="/img/prof_soham.png" alt="adam"/>
-                    <div class="member-name">Soham Jatakia</div>
-                    <div class="member-title">Software Development Lead</div>
-                </div>
-                <div class ="member">
-                    <img src="/img/prof_chloe.png" alt="adam"/>
-                    <div class="member-name">Chloe Lopez</div>
-                    <div class="member-title">User Interface Specialist</div>
-                </div>
-                <div class ="member">
-                    <img src="/img/prof_sherman.png" alt="adam"/>
-                    <div class="member-name">Sherman Cheung</div>
-                    <div class="member-title">Algorithms Specialist</div>
-                </div>
-                <div class ="member">
-                    <img src="/img/prof_anjali.png" alt="adam"/>
-                    <div class="member-name">Anjali Patel</div>
-                    <div class="member-title">QA Specialist</div>
-                </div>
-                <div class ="member">
-                    <img src="/img/prof_brenton.png" alt="adam"/>
-                    <div class="member-name">Brenton Ang</div>
-                    <div class="member-title">Database Specialist</div>
-                </div>
-            </div>
+        <div class="app-cta">
+          <a href="https://itunes.apple.com/app/id972909677" class="applink-cta appstore-cta" title="Download on the App Store">Download on the App Store</a>
+          <a href="https://play.google.com/store/apps/details?id=tv.periscope.android" class="applink-cta playstore-cta" title="Get it on Google Play">Get it on Google Play</a>
         </div>
     </div>
 
-  <!-- jQuery -->
-  <script src="js/jquery.js"></script>
+<!--
+    <![if !IE]>
+    <video autoplay loop poster="images/splash_bg.jpg" id="bgvid">
+    <source src="images/splash_bg.webm" type="video/webm">
+    <source src="images/splash_bg.mp4" type="video/mp4">
+    </video>
+    <![endif]>
+-->
 
-  <!-- Bootstrap Core JavaScript -->
-  <script src="js/bootstrap.min.js"></script>
+    <div class="overlay">
+        <div class="overlay-bg"></div>
+        <!--
+        <iframe class="overlay-video" src="https://player.vimeo.com/video/128546436?api=1&color=ffffff&badge=0&title=0&byline=0&portrait=0&amp;wmode=transparent" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <div class="overlay-close">
+          <svg width="24px" height="24px" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
+            <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" sketch:type="MSPage">
+              <g id="vanity-google-store-copy-3" sketch:type="MSArtboardGroup" transform="translate(-987.000000, -20.000000)" fill="#FFFFFF">
+                <path d="M1011,22.4257143 L1008.57429,20 L999,29.5742857 L989.425714,20 L987,22.4257143 L996.574286,32 L987,41.5742857 L989.425714,44 L999,34.4257143 L1008.57429,44 L1011,41.5742857 L1001.42571,32 L1011,22.4257143 Z" id="close_x" sketch:type="MSShapeGroup"></path>
+              </g>
+            </g>
+          </svg>
+        </div>
+        
+    -->
+        
+    </div>
 
 </template>
-
 
