--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -172,7 +172,9 @@ nav .appstore-link:hover{
 }
 nav .playstore-link,
 nav .playstore-link:hover {
-  background-image: url('../images/logo_playstore.svg');
+  background-image: url('img/logo_playstore.ico');
+  width: 40px;
+  height: 40px;
 }
 
 /* ====== Header Section */
