--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
             <nav>
                 <a href="about">About</a>
                 <a href="https://medium.com/@theburrd">Blog</a>
-                <a href="placeholder" class="applink appstore-link" title="Download on the App Store">App Store</a>
-                <a href="https://play.google.com/store/apps/details?id=tv.periscope.android" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a>
+                <a href="appstore placeholder" class="applink appstore-link" title="Download on the App Store">App Store</a>
+                <a href="playstore placeholder" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a>
             </nav>
             <h1>Burrd</h1>
             <span class="headline">
@@ -46,8 +46,8 @@
         -->
 
             <div class="app-cta">
-              <a href="https://itunes.apple.com/app/id972909677" class="applink-cta appstore-cta" title="Download on the App Store">Download on the App Store</a>
-              <a href="https://play.google.com/store/apps/details?id=tv.periscope.android" class="applink-cta playstore-cta" title="Get it on Google Play">Get it on Google Play</a>
+                <a href="appstore link" class="applink-cta appstore-cta" title="Download on the App Store">Download on the App Store</a>
+                <a href="playstore link" class="applink-cta playstore-cta" title="Get it on Google Play">Get it on Google Play</a>
             </div>
         </div>
 
@@ -76,11 +76,70 @@
                 </g>
               </svg>
             </div>
-            
-        -->
+            -->
             
         </div>
     </div>
+</template>
+
+
+
+<template name="About">
+    <section id="header">
+        <div class="width">
+            <a href="/"><h3 class="logo">Burrd</h3></a>
+            <nav>
+                <a href="about" class="selected">About</a>
+                <a href="https://medium.com/@theburrd">Blog</a>
+                <a href="appstore link" class="applink appstore-link" title="Download on the App Store">App Store</a>
+                <a href="playstore link" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a>
+            </nav>
+        </div>
+        <div class="clear"></div>
+    </section>
+    <div class="clear"></div>
+    <section id="about">
+        <div class="width">
+            <h4>About Us</h4>
+            <span class="subhead">OUR STORY</span>
+            <p>Burrd is a fusion between blurred and bird. Why? Because the
+            BIRD is the <b>WORD</b>.  The Burrd is inspired by our lead software
+            developer’s beloved Cockatiel who has an
+            affinity for fine beers. We are a group of thrifty college students from UC San Diego who
+            are always on the prowl for the best deals to get us drunk or full for as little money
+            as possible.</p>
+        </div>
+    </section>
+
+    <section id="team">
+        <div class="width">
+            <ul>
+                <li><span class="avatar" id="david"></span><a href='placeholder'>David Liberman</a><span class="title">CEO</span></li>
+                <li><span class="avatar" id="adam"></span><a href='placeholder'>Adam Dorwart</a><span class="title">CTO</span></li>
+                <li><span class="avatar" id="brenton"></span><a href='placeholder'>Brenton Ang</a><span class="title">Database Specialist</span></li>
+                <li><span class="avatar" id="anjali"></span><a href='placeholder'>Anjali Patel</a><span class="title">Android Developer</span></li>
+                <li><span class="avatar" id="sherman"></span><a href='placeholder'>Sherman Cheung</a><span class="title">Software Engineer</span></li>
+                <li><span class="avatar" id="chloe"></span><a href='placeholder'>Chloe Lopez</a><span class="title">UI Specialist</span></li>
+                <li><span class="avatar" id="soham"></span><a href='placeholder'>Soham Jatakia</a><span class="title">Android Developer</span></li>
+                <li><span class="avatar" id="andrew"></span><a href='placeholder'>Andrew Walters</a><span class="title">iOS Developer</span></li>
+                <li><span class="avatar" id="trent"></span><a href='placeholder'>Trenton Miller</a><span class="title">Android Developer</span></li>
+            </ul>
+            <div class="clear"></div>
+        </div>
+    </section>
+
+
+    <footer>
+    <div class="width-footer">
+        <ul id="contactInfo">
+            <li><a href="email place holder">Contact</a></li>
+            <li><a href="help placeholder">Support</a></li>
+        </ul>
+        <!-- <span class="copyright">&copy;2015 Twitter, Inc</span> -->
+      <div class="clear"></div>
+    </div>
+    </footer>
 
 </template>
+
 
