--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -166,7 +166,8 @@ nav .applink:hover {
   background-repeat: no-repeat;
   font-size: 0;
   line-height: 0;
-  padding: 24px 24px 28px;
+  padding: 30px;
+  /*padding: 20px 20px 28px; */
 }
 
 nav .applink:hover {
@@ -179,9 +180,7 @@ nav .appstore-link:hover{
 }
 nav .playstore-link,
 nav .playstore-link:hover {
-  background-image: url('playstore placeholder');
-  background-size: contain;
-
+  background-image: url('img/logo_playstore_shrink.png');
 }
 
 /* ====== Header Section */
