Move About template into its own file

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -176,7 +176,7 @@ nav .applink:hover {
 
 nav .appstore-link,
 nav .appstore-link:hover{
-  background-image: url('appstore placeholder');
+  background-image: url('img/logo_appstore_shrink.png');
 }
 nav .playstore-link,
 nav .playstore-link:hover {
