--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,5 @@
-<head>
-    <meta charset="utf-8">
-    <title>Burrd</title>
-    <meta name="description" content="Your happy hour destination">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/splash.css">
-    <link rel="stylesheet" href="images/museosans_300_macroman/stylesheet.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="images/museosans_500_macroman/stylesheet.css" type="text/css" charset="utf-8" />
-    <link rel="stylesheet" href="images/museosans_700_macroman/stylesheet.css" type="text/css" charset="utf-8" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
-<!--
-    <script src="/js/jquery-1.11.0.min.js"></script>
-    <script src="/js/vanity.js"></script>
--->
-</head>
+<body>
+</body>
 
 <template name="Home">
     <div id="splash">
@@ -23,13 +7,24 @@
             <nav>
                 <a href="about">About</a>
                 <a href="https://medium.com/@theburrd">Blog</a>
-                <a href="appstore placeholder" class="applink appstore-link" title="Download on the App Store">App Store</a>
                 <a href="playstore placeholder" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a>
+                <!-- <a href="appstore placeholder" class="applink appstore-link" title="Download on the App Store">App Store</a> -->
             </nav>
-            <h1>Burrd</h1>
-            <span class="headline">
-                Your happy hour destination
-            </span>
+
+            <h2></h2>
+
+            <div id="logo">
+                <img id="pic-logo" src="img/burrd_large.png">
+                <h1 id="logo-title">Burrd</h1>
+            </div>
+            
+            <!--
+            
+            <h3 class="headline">
+                Your happy hour destination</h3>
+            -->
+            
+        
         <!--
             <div class="video-cta">
               <svg class="playbutton" width="88px" height="88px" viewBox="0 0 88 88" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
@@ -46,8 +41,9 @@
         -->
 
             <div class="app-cta">
-                <a href="appstore link" class="applink-cta appstore-cta" title="Download on the App Store">Download on the App Store</a>
                 <a href="playstore link" class="applink-cta playstore-cta" title="Get it on Google Play">Get it on Google Play</a>
+                <!-- <a href="appstore link" class="applink-cta appstore-cta" title="Download on the App Store">Download on the App Store</a> -->
+
             </div>
         </div>
 
@@ -81,9 +77,6 @@
         </div>
     </div>
 </template>
-
-
-
 
 
 
