--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,6 +4,7 @@
 }
 html {
   height:100%;
+  width: 100%;
   padding:0;
   margin:0;
   font-size: 14px;
@@ -19,6 +20,7 @@ html {
 
 body {
   height:100%;
+  width: 100%;
   background:#F5F5F5;
   padding:0;
   margin:0;
