Play around with logo to try to get it centered

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
 
             <div id="logo">
                 <img id="pic-logo" src="img/burrd_large.png">
-                <h1 id="logo-title">Burrd</h1>
+                <h1><span id="logo-title">Burrd</span></h1>
             </div>
             
             <!--
