--- a/stylesheets/splash.css
+++ b/stylesheets/splash.css
@@ -26,7 +26,9 @@
     */
     
     height:80px;
-    width:40%;
+    width: 50%;
+    margin: 0 auto;
+    /*width:40%;*/
     /*
     max-width:360px;
     text-indent:-9000px;
@@ -42,12 +44,13 @@
     float: left;
     height: 80px;
     width: 80px;
+    margin: 15px;
 }
 
 #logo-title {
     float: left;
     font-size: 100px;
-    margin: 0;
+    margin: 0 0 0 0;
 }
 
 span.headline {
