Revert to previous commit, remove App Store stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,11 @@
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/splash.css">
+<!--
     <link rel="stylesheet" href="images/museosans_300_macroman/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="images/museosans_500_macroman/stylesheet.css" type="text/css" charset="utf-8" />
     <link rel="stylesheet" href="images/museosans_700_macroman/stylesheet.css" type="text/css" charset="utf-8" />
+-->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 <!--
@@ -23,7 +25,7 @@
             <nav>
                 <a href="about">About</a>
                 <a href="https://medium.com/@theburrd">Blog</a>
-                <a href="appstore placeholder" class="applink appstore-link" title="Download on the App Store">App Store</a>
+                <!-- <a href="appstore placeholder" class="applink appstore-link" title="Download on the App Store">App Store</a> -->
                 <a href="playstore placeholder" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a>
             </nav>
             <h1>Burrd</h1>
@@ -46,7 +48,7 @@
         -->
 
             <div class="app-cta">
-                <a href="appstore link" class="applink-cta appstore-cta" title="Download on the App Store">Download on the App Store</a>
+                <!-- <a href="appstore link" class="applink-cta appstore-cta" title="Download on the App Store">Download on the App Store</a> -->
                 <a href="playstore link" class="applink-cta playstore-cta" title="Get it on Google Play">Get it on Google Play</a>
             </div>
         </div>
