--- a/stylesheets/splash.css
+++ b/stylesheets/splash.css
@@ -3,6 +3,8 @@
     background-color: #000000;
     background-size: cover;
     color: white;
+    height: 100%;
+    width: 100%;
     text-align: center;
 }
 #splash .container {
