--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
             <nav>
                 <a href="about" class="selected">About</a>
                 <a href="https://medium.com/@theburrd">Blog</a>
-                <a href="appstore link" class="applink appstore-link" title="Download on the App Store">App Store</a>
+                <!-- <a href="appstore link" class="applink appstore-link" title="Download on the App Store">App Store</a> -->
                 <a href="playstore link" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a>
             </nav>
         </div>
@@ -44,14 +44,14 @@
 
 
     <footer>
-    <div class="width-footer">
-        <ul id="contactInfo">
-            <li><a href="email place holder">Contact</a></li>
-            <li><a href="help placeholder">Support</a></li>
-        </ul>
-        <!-- <span class="copyright">&copy;2015 Twitter, Inc</span> -->
-      <div class="clear"></div>
-    </div>
+        <div class="width-footer">
+            <ul id="contactInfo">
+                <li><a href="email place holder">Contact</a></li>
+                <li><a href="help placeholder">Support</a></li>
+            </ul>
+            <!-- <span class="copyright">&copy;2015 Twitter, Inc</span> -->
+          <div class="clear"></div>
+        </div>
     </footer>
 
 </template>
