Revert to old gaslamp background

--- a/stylesheets/splash.css
+++ b/stylesheets/splash.css
@@ -1,5 +1,5 @@
 #splash {
-    background: #000 url("img/ibiza.jpg") no-repeat center center;
+    background: #000 url("img/gaslamp_blur.png") no-repeat center center;
     background-color: #000000;
     background-size: cover;
     color: white;
