--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,15 @@
                 <!-- <a href="appstore placeholder" class="applink appstore-link" title="Download on the App Store">App Store</a> -->
                 <a href="playstore placeholder" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a>
             </nav>
-            <h1>Burrd</h1>
+            <div class="heading">
+                <img src="img/burrd_large.png">
+                <h1>Burrd</h1>
+            </div>
             <span class="headline">
-                Your happy hour destination
-            </span>
+                    Your happy hour destination
+                </span>
+                
+            
         <!--
             <div class="video-cta">
               <svg class="playbutton" width="88px" height="88px" viewBox="0 0 88 88" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:sketch="http://www.bohemiancoding.com/sketch/ns">
