--- a/stylesheets/splash.css
+++ b/stylesheets/splash.css
@@ -1,7 +1,8 @@
 #splash {
-    background: #000 url("img/gaslamp_blur.png") no-repeat center center;
+    background: #000 url("img/reflecting_pond.jpg") no-repeat center center;
     background-color: #000000;
     background-size: cover;
+    margin-top: -40px;
     color: white;
     height: 100%;
     width: 100%;
@@ -19,38 +20,36 @@
 }
 
 .heading {
-    margin-top: 100px;
-    margin-bottom: 20px;
+    display: block;
+    margin-top: 300px;
     text-align: center;
 }
 
 .heading img {
     display: inline-block;
-    height:80px;
+    height: 80px;
     width: 80px;
     vertical-align: middle;
     margin-right: 10px;
-    
 }
 
 .heading h1 {
-    /*background-image: url("img/burrd_large.png");
-    background-size: contain; */
     display: inline-block;
-    font-size: 100px;
-    /*background-position: center center;*/
-    background-repeat: no-repeat;
     max-width:360px;
-    /*text-indent:-9000px;*/
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
+    font-size: 100px;
     overflow:hidden;
-    margin: 0;
+    margin: 0;    
     vertical-align: middle;
-
 }
 
 
 span.headline {
-    font-size:1.6em;
+    display: block;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 200;
+    font-size: 1.6em;
 }
 
 .video-cta {
