--- a/templates/index.html
+++ b/templates/index.html
@@ -11,9 +11,7 @@
                 <img src="img/burrd_large.png">
                 <h1>Burrd</h1>
             </div>
-            <span class="headline">
-                    Your happy hour destination
-                </span>
+            <span class="headline">Your happy hour destination</span>
                 
             
         <!--
