--- a/stylesheets/splash.css
+++ b/stylesheets/splash.css
@@ -1,8 +1,8 @@
 #splash {
+    /*By Rufustelestrat (Own work) [GFDL (http://www.gnu.org/copyleft/fdl.html), CC-BY-SA-3.0 (http://creativecommons.org/licenses/by-sa/3.0/) or CC BY 2.5 (http://creativecommons.org/licenses/by/2.5)], via Wikimedia Commons*/
     background: #000 url("img/reflecting_pond.jpg") no-repeat center center;
     background-color: #000000;
     background-size: cover;
-    margin-top: -40px;
     color: white;
     height: 100%;
     width: 100%;
@@ -21,7 +21,7 @@
 
 .heading {
     display: block;
-    margin-top: 300px;
+    margin-top: 55%;
     text-align: center;
 }
 
@@ -35,7 +35,7 @@
 
 .heading h1 {
     display: inline-block;
-    max-width:360px;
+    max-width: 360px;
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
     font-size: 100px;
@@ -129,7 +129,8 @@ video#bgvid {
 }
 
 nav {
-    font-family: 'museo_sans500', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 100;
 }
 
 .overlay {
@@ -172,5 +173,20 @@ nav {
 
     #splash h1 {
         margin-top: 20px;
+    }
+
+    #splash .heading {
+        margin-top: 55%;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    #splash .container {
+        min-height: 480px;
+    }
+
+
+    #splash .heading {
+        margin-top: 30%;
     }
 }
