Add Burrd text to About page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,10 @@
 <template name="About">
     <section id="header">
         <div class="width">
-            <a href="/"><h3 class="logo">Burrd</h3></a>
+            <a class="title" href="/">
+                <img src="img/burrd_large.png">
+                <h3 class="logo">Burrd</h3>
+            </a>
             <nav>
                 <a href="about" class="selected">About</a>
                 <a href="https://medium.com/@theburrd">Blog</a>
