--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -23,12 +23,13 @@ body {
   padding:0;
   margin:0;
   min-width:320px;
-  font-family: 'museo_sans300', sans-serif;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
   -webkit-font-smoothing: antialiased;
   color:#3F4D51;
 }
 strong {
-  font-family: 'museo_sans700', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: normal;
 }
 h1,h2,h3,h4,h5,h6 {
@@ -55,7 +56,7 @@ a:hover .icon {
   fill:#2A748B;
 }
 .width {
-  max-width:1000px;
+  /*max-width:1000px;*/
   margin:0 auto;
   padding:60px;
 }
@@ -188,16 +189,38 @@ section#header {
   background:#40A4C4;
   color:white;
 }
-section#header h3.logo {
+
+section#header a {
+
+}
+
+section#header h3 {
+  font-family: 'Roboto', sans-serif;
+  color: #fff;
+  font-weight: 100;
+  font-size: 5em;
   float:left;
-  width:286px;
+  margin: 0;
+  /*width:286px;
   height:70px;
   background-image:url('img/burrd_large.png');
   background-size:contain;
   background-repeat:no-repeat;
+  
   text-indent:-9000px;
   margin-bottom:35px;
+  */
 }
+
+section#header img {
+  float: left;
+  margin-left: 10%;
+  margin-right: 1%;
+  display: inline-block;
+  height: 80px;
+  width: 80px;
+}
+
 @media all and (max-width : 720px) {
   section#header h3.logo {
     float:none;
