--- a/stylesheets/splash.css
+++ b/stylesheets/splash.css
@@ -21,16 +21,18 @@
 
 .heading {
     display: block;
-    margin-top: 54%;
+    position: absolute;
+    top: 62%;
+    width: 100%;
     text-align: center;
 }
 
 .heading img {
     display: inline-block;
-    height: 80px;
-    width: 80px;
+    height: 7em;
+    width: 7em;
     vertical-align: middle;
-    margin-right: 10px;
+    margin-right: 1em;
 }
 
 .heading h1 {
