Experiment with alignment of Burrd text

--- a/stylesheets/splash.css
+++ b/stylesheets/splash.css
@@ -22,25 +22,24 @@
 .heading {
     display: block;
     position: absolute;
-    top: 62%;
-    width: 100%;
+    bottom: 20%;
     text-align: center;
 }
 
 .heading img {
     display: inline-block;
-    height: 7em;
-    width: 7em;
+    height: 6em;
+    width: 6em;
     vertical-align: middle;
     margin-right: 1em;
 }
 
 .heading h1 {
     display: inline-block;
-    max-width: 360px;
+    /*max-width: 360px;*/
     font-family: 'Roboto', sans-serif;
     font-weight: 100;
-    font-size: 7em;
+    font-size: 6em;
     overflow:hidden;
     margin: 0;    
     vertical-align: middle;
@@ -51,7 +50,7 @@ span.headline {
     display: block;
     font-family: 'Roboto', sans-serif;
     font-weight: 200;
-    font-size: 1.6em;
+    font-size: 1.5em;
     margin-top: -1%;
 }
 
