--- a/stylesheets/splash.css
+++ b/stylesheets/splash.css
@@ -20,9 +20,12 @@
 }
 
 .heading {
-    display: block;
+    /*display: block;*/
     position: absolute;
-    bottom: 20%;
+    top: 50%;
+    left: 50%;
+    /*bottom: 20%;*/
+    /*margin-top: 45em;*/
     text-align: center;
 }
 
