Change fonts to Roboto and remove Support footer

--- a/templates/about.html
+++ b/templates/about.html
@@ -50,7 +50,7 @@
         <div class="width-footer">
             <ul id="contactInfo">
                 <li><a href="email place holder">Contact</a></li>
-                <li><a href="help placeholder">Support</a></li>
+                <!-- <li><a href="help placeholder">Support</a></li> -->
             </ul>
             <!-- <span class="copyright">&copy;2015 Twitter, Inc</span> -->
           <div class="clear"></div>
