--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -89,7 +89,7 @@ h6 {
 }
 h4 {
   font-size:2.5em;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'museo_sans700', sans-serif;
   margin: 60px auto 10px;
   text-align: center;
 }
