Start adding mobile optimization to About

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,11 @@
 <template name="About">
     <section id="header">
         <div class="width">
-            <a class="title" href="/">
-                <img src="img/burrd_large.png">
-                <h3 class="logo">Burrd</h3>
+            <a href="/">
+                <div class="title">
+                    <img id="burrd-logo" src="img/burrd_large.png">
+                    <h3 class="logo">Burrd</h3>
+                </div>
             </a>
             <nav>
                 <a href="about" class="selected">About</a>
