--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
             </nav>
             
             <div class="heading">
-                <img src="img/burrd_large.png">
+                <img id="burrd-logo" src="img/burrd_large.png">
                 <h1>Burrd</h1>
                 <span class="headline">Your Happy Hour Destination</span>
             </div>
