--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -214,18 +214,17 @@ section#header h3 {
 
 section#header img {
   float: left;
-  margin-left: 10%;
-  margin-right: 1%;
   display: inline-block;
-  height: 80px;
-  width: 80px;
+  height: 5em;
+  width: 5em;
 }
 
 @media all and (max-width : 720px) {
   section#header h3.logo {
     float:none;
-    display:block;
+    display:inline-block;
     margin:0 auto;
+    font-size: 4em;
     -webkit-transform: scale(0.7);
     -moz-transform: scale(0.7);
     -ms-transform: scale(0.7);
@@ -531,69 +530,99 @@ section#investors li#menlo {
 
 
 /* ======== info pages ====== */
-  .infobackground {
-    background-color: white;
-    padding:20px 0 80px;
-  }
-  .info {
-    color:#6B8187;
-    width:100%;
-    margin:0 auto;
-    padding: 24px 20px;
+.infobackground {
+  background-color: white;
+  padding:20px 0 80px;
+}
+.info {
+  color:#6B8187;
+  width:100%;
+  margin:0 auto;
+  padding: 24px 20px;
 
-    font-size:1.4em;
-    max-width:700px;
-    line-height:1.4em;
-    border-bottom:1px solid #E0F0F5;
-  }
-  .info h1, .info h2, .info h3, .info h4, .info h5, .info h6 {
-    color:#3F4D51;
-  }
-  .info p {
-    font-size:0.8em;
-    line-height:1.4em;
+  font-size:1.4em;
+  max-width:700px;
+  line-height:1.4em;
+  border-bottom:1px solid #E0F0F5;
+}
+.info h1, .info h2, .info h3, .info h4, .info h5, .info h6 {
+  color:#3F4D51;
+}
+.info p {
+  font-size:0.8em;
+  line-height:1.4em;
+}
+
+.info .notice {
+  font-size: .7em;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+
+  body {
+    font-size: 1em;
   }
 
-  .info .notice {
-    font-size: .7em;
+  .width {
+    padding: 50px;
+  }
+
+  section#header img {
+    display: inline-block;
+    height: 3.5em;
+    width: 3.5em;
+  }
+
+  .title {
     text-align: center;
-    text-transform: uppercase;
   }
 
-  @media only screen
-  and (min-device-width : 320px)
-  and (max-device-width : 480px) {
-    body {
-      font-size:1em;
-    }
+  span.subhead:before, span.subhead:after {
+    content:"";
+    width:1em;
+    height:0.2em;
+    border-top:1px solid white;
+    display:inline-block;
+    margin:0 10px;
   }
+  
   .info blockquote {
     color:#3F4D51;
     font-family: 'museo_sans700', sans-serif;
   }
+
   .info li {
     margin-bottom:6px;
     color:#3F4D51;
   }
+
   .info .emphasis {
 
   }
+
   .info .emphasis li {
     margin-bottom:16px;
     font-family: 'museo_sans300', sans-serif;
   }
+
   .info ol {
     list-style-type: lower-roman;
   }
+
   .info ol ol {
     list-style-type: lower-alpha;
     font-size:0.8em;
     line-height:1.3em;
   }
+
   .info ul ul {
     font-size:0.8em;
     line-height:1.3em;
   }
+
   .info .card {
     -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
@@ -604,6 +633,7 @@ section#investors li#menlo {
   -webkit-box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.1);
   }
+
   .info img.asset-preview {
     display:block;
     width:100%;
@@ -614,17 +644,21 @@ section#investors li#menlo {
   -moz-border-radius: 4px;
   border-radius: 4px;
   }
+
   .info img.asset-preview.quarter {
     display:inline-block;
     width:24%;
   }
+
   .info span.captionlink {
     padding-left:10px;
     font-size:0.8em;
   }
+
   .info span.captionlink a {
     font-family: 'museo_sans700', sans-serif;
   }
+}
 
 
 /* ====== Footer */
