--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
         <div class="width">
             <a href="/">
                 <div class="title">
-                    <img id="burrd-logo" src="img/burrd_large.png">
+                    <span><img id="burrd-logo" src="img/burrd_large.png"></span>
                     <h3 class="logo">Burrd</h3>
                 </div>
             </a>
