Add amber color to top nav

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -239,7 +239,7 @@ section#header img {
     display:block;
   }
   section#header {
-    background-color:#328AA7;
+    background-color:#FFC107;
   }
 }
 /* ====== About Section */
