--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
                 <a href="about">About</a>
                 <a href="https://medium.com/@theburrd">Blog</a>
                 <!-- <a href="appstore placeholder" class="applink appstore-link" title="Download on the App Store">App Store</a> -->
-                <a href="playstore placeholder" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a>
+                <!-- <a href="playstore placeholder" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a> -->
+                <a href="https://github.com/theburrd">GitHub</a>
             </nav>
             
             <div class="heading">
@@ -33,7 +34,8 @@
 
             <div class="app-cta">
                 <!-- <a href="appstore link" class="applink-cta appstore-cta" title="Download on the App Store">Download on the App Store</a> -->
-                <a href="playstore link" class="applink-cta playstore-cta" title="Get it on Google Play">Get it on Google Play</a>
+                <!-- <a href="playstore link" class="applink-cta playstore-cta" title="Get it on Google Play">Get it on Google Play</a> -->
+                <h2 class="coming-soon">Coming soon to the Google Play Store</h2>
             </div>
         </div>
     </div>
