Add GitHub link to About nav

--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,8 @@
                 <a href="about" class="selected">About</a>
                 <a href="https://medium.com/@theburrd">Blog</a>
                 <!-- <a href="appstore link" class="applink appstore-link" title="Download on the App Store">App Store</a> -->
-                <a href="playstore link" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a>
+                <!-- <a href="playstore link" class="applink playstore-link" title="Download on the Play Store">Google Play Store</a> -->
+                <a href="https://github.com/theburrd">GitHub</a>
             </nav>
         </div>
         <div class="clear"></div>
